css/style.css
/*Intro Section*/
.intro-bio-container {
  padding-top: 200px;
  margin-bottom: 125px;
}
.bio-iam {
  font-size: 3rem;
  color: #5D707C;
}
.bio-desc {
  color: #5D707C;
  padding-top: 25px;
  max-width: 550px;
  font-size: 2.25rem;
  font-weight: 400;
  line-height: 1.4;
}

/*Section*/
.section-divider {
  margin-top: 0;
  margin-top: 15px;
  width: 75px;
  float: left;
  margin-bottom: 50px;
}

.section-title {
  font-weight: 500;
  padding-bottom: 0;
  margin: 0;
}
.section-declaration {
  padding-top: 100px;
  padding-bottom: 50px;
}

/*Feature and Project*/
.feature-box {
  display: inline-block;
  box-sizing: border-box;
  width: 100%;
  height: 400px;
  position: relative;
  z-index: 1;
  text-decoration: none;
}
.feature-container {
  width: 100%;
  text-decoration: none;
  color: #5D707C;
  font-size: 1.75rem;
  margin: 0;
  padding: 0;
}
.feature-container:visited {
  color: #5D707C;
}
.project-divider {
  width: 75px;
  height: 5px;
  border: none;
  background-color: #5D707C;
  background: inherit;
  display: block;
}

/*Title Styles*/
.feature-title-svg {
  padding: 0;
  margin-top: 35px;
  margin-bottom: 10px;
  width: 100%;
  height: 80px;
  background-origin: border-box;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: left center;
}
.feature-title-svg:hover ~ .feature-title-svg-shadow {
  display: block;
}
#feature2-title {
  height: 35px;
  background-image: url(../images/tungstenText.svg);
}

/*Image Styles*/
.feature-image {
  display: block;
  z-index: 5;
  position: absolute;
  background-origin: border-box;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: bottom left;
  bottom: 0;
  width: 100%;
}
.feature1-image {
  height: 175px;
  background-image: url(../images/slcHeatmapBackground.svg);
  
}
#feature1-title {
  background-image: url(../images/slcHeatmapText.svg);
}

.feature2-image {
  height: 300px;
  max-width: 365px;
  background-image: url(../images/tungstenColorBackground.svg);
  background-position: center;
}

#feature1-divider {
  background: linear-gradient(to right, #FF841D, #D64C40) !important;
}

#feature2-divider {
  background: linear-gradient(to right, #269CFF, #D64DE5) !important;
}
.feature-image:hover {
  z-index: 5;
}
.feature-image:hover ~ .feature-image-shadow {
  display: block;
}
.feature-container:hover ~ .feature-image-shadow {
  display: block;
}

.feature-image-shadow {
  z-index: 4;
  display: none;
  z-index: 0;
  position: absolute;
  width: 100%;
  background-origin: border-box;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: bottom left;
  bottom: 0;
  -webkit-filter: blur(50px);
  filter: blur(50px);
  box-shadow: inset 0 0 100px #ffffff;
}

.feature-title-svg-shadow {
  display: none;
  z-index: 5;
  position: absolute;
  padding: 0;
  margin-top: -45px;
  margin-bottom: 10px;
  width: 100%;
  background-origin: border-box;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: left center;
  -webkit-filter: blur(25px);
  filter: blur(25px);
}

#feature3-divider {
  background: linear-gradient(to right, #DCDCDC, #6B6B6B) !important;
  bottom: 0;
  position: absolute;
  right: 0;
}

#feature3-title {
  background-image: url(../images/coldTypePracticeText.svg);
  background-position: bottom right;
}





.bottom-right {
  text-align: right;
  float: right;
  bottom: 0;
  position: absolute;
  padding-bottom: 35px;
}

.feature3-image {
  height: 100%;
  width: 100%;
  background-position: left;
  background-image: url(../images/coldTypePracticeBackground.svg);
}

#feature3-box {
  display: none;
}

#feature-experiment1-title {
  background-image: url(../images/blurredText.svg);
}

#feature-experiment1-divider {
  background: linear-gradient(to right, #DC96B4, #B05CFA) !important;
}

.feature-experiment1-image {
  height: 175px;
  background-image: url(../images/blurredBackground.svg);
  background-position: center;
  background-size: 150px 150px;
}

.experiment-box {
  height: 300px;
}

#feature-experiment2-title {
  background-image: url(../images/expandingCircleText.svg);
  background-position: bottom right;
}

#feature-experiment2-divider {
  background: linear-gradient(to right, #28BFC0, #24D96A) !important;
  bottom: 0;
  position: absolute;
  right: 0;
}

.feature-experiment2-image {
  background-image: url(../images/expandingCircleMenuBackground-noshadow.svg);
  height: 100%;
  background-position: top left;
  background-size: contain;
  background-size: 55%;
}

.footer-container {
  margin-top: 50px;
  height: 200px;
}

.footer-content {
  height: 150px;
  padding-top: 50px;
  margin-bottom: 0;
  padding-bottom: 50px;
}

.footer-title {
  padding-top: 20px;
  margin-bottom: 15px;
  color: #4a5861;
}

.footer-desc {
  font-weight: 400;
  margin-top: 0;
  color: #8a9fae;
}
.footer-logo-container {
  display: none;
}

@media (min-width: 650px) {
  .footer-logo-container {
    height: 120px;
    display: inline-block;
    width: 100px;
  }
}

.footer-logo {
  height: 75px;
  width: 100px;
  margin: 0;
  margin-top: 25px;
  float: right;
  display: inline-block;
}

